syntax = "proto3";

package notekeeper;

service Backend {
	rpc OpenMasterDb(OpenMasterDbRequest) returns (StatusResponse) {}

	rpc CreateAccount(CreateAccountRequest) returns (IdResponse) {}
	rpc UnlockAccount(UnlockAccountRequest) returns (StatusResponse) {}
	rpc SigninAccount(SigninAccountRequest) returns (IdResponse) {}
	rpc SignoutAccount(IdRequest) returns(StatusResponse) {}
	rpc LockAccount(IdRequest) returns (StatusResponse) {}

	rpc UIState(TokenRequest) returns (UIStateResponse) {}
	rpc SaveUIState(SaveUIStateRequest) returns (StatusResponse) {}
	rpc AccountState(TokenRequest) returns (AccountStateResponse) {}

	rpc CreateNotebook(CreateNotebookRequest) returns (IdResponse) {}
}

// a generic RPC response message when we only need a status returned
message StatusResponse {
	string status = 1;
	int32 code = 2;
}

// a generic RPC request message
message TokenRequest {
	string token = 1;
}

// a generic RPC request message containing a common UUID string
message IdRequest {
	string id = 1;
}

// a generic RPC response message containing a common UUID string and status
message IdResponse {
	string id = 1;
	string status = 2;
	int32 code = 3;
}

message UIStateResponse {
	int32 windowWidth = 1;
	int32 windowHeight = 2;
}

message SaveUIStateRequest {
	int32 windowWidth = 1;
	int32 windowHeight = 2;
}

message AccountStateResponse {
	bool signedIn = 1;
	bool locked = 2;
}

message OpenMasterDbRequest {
	string path = 1; // user data directory path
}

message CreateAccountRequest {
	string name = 1; // account name
	string email = 2; // user email
	string passphrase = 3; // user password
}

message UnlockAccountRequest {
	string id = 1;
	string passphrase = 2;
}

message SigninAccountRequest {
	string name = 1;
	string email = 2;
	string passphrase = 3;
}

message CreateNotebookRequest {
	string name = 1;
	string user_id = 2;
	string shelf_id = 3;
}
